Finally updated my themes

--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -619,7 +619,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .slateTextArea-1Mkdgw {
     caret-color: white;
     position: absolute;
-    left: -16px;
+    left: -31px;
+    top: -1px !important;
 }
 
 .attachWrapper-2TRKBi {
@@ -632,10 +633,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border: none;
 }
 
-.dividerRed-MKoLlr {
+#app-mount .isUnread-3Ef-o9 .content-1o0f9g {
     color: white;
     background: linear-gradient(225deg, rgba(0, 140, 153, 0.722) 0%, rgba(0, 0, 0, 0.55) 100%);
-    padding: 3px 0;
+    padding: 4px 7px;
     border: 2px solid rgba(0, 0, 0, 0.167);
 }
 
@@ -780,15 +781,13 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border: 1px solid rgba(255, 255, 255, 0.63);
 }
 
-.divider-3gKybi {
+#app-mount .content-1o0f9g {
     color: silver;
+    padding: 4px 7px;
     background-color: rgba(255,255,255,.1);
 }
 
-.dividerContent-2L12VI:after, 
-.dividerContent-2L12VI:before,
-.dividerRed-MKoLlr .dividerContent-2L12VI:after, 
-.dividerRed-MKoLlr .dividerContent-2L12VI:before {
+.divider-JfaTT5 {
     border: none;
 }
 
@@ -1177,26 +1176,27 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: transparent;
 }
 
-.reactionInner-rRPZdY {
-    padding: 7px 9px;
+.reactionInner-15NvIl {
+    padding: 3px 2px;
+    margin-left: 7px;
 }
 
-.reaction-1ELvT8 .emoji {
+.reaction-1hd86g .emoji {
     width: 1.21rem;
     height: 1.21rem;
 }
 
-.reactionCount-2ddRoS,
-.reaction-1ELvT8:hover .reactionCount-2ddRoS {
+.reactionCount-2mvXRV,
+.reaction-1hd86g:hover .reactionCount-2mvXRV {
     color: silver;
 }
 
-.reactionMe-23mbRf .reactionCount-2ddRoS, 
-.reactionMe-23mbRf:hover .reactionCount-2ddRoS {
+.reactionMe-wv5HKu .reactionCount-2mvXRV, 
+.reactionMe-23mbRf:hover .reactionCount-2mvXRV {
     color: #008c99;
 }
 
-.reaction-1ELvT8.reactionMe-23mbRf {
+.reaction-1hd86g.reactionMe-wv5HKu {
     background-color: rgb(0, 140, 153, .154);
 }
 
@@ -1355,7 +1355,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .activity-2Gy-9S,
 .membersGroup-v9BXpm,
 .container-2Pjhx-,
-.timestampCozy-2hLAPV {
+.timestampCozy-1HNQR2 {
     color: white;
 }
 
@@ -1367,23 +1367,29 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: rgba(0, 0, 0, 0.41);
 }
 
-.containerCozyBounded-1rKFAn {
+.container-3FojY8 {
     overflow: visible;
 }
 
-.headerCozyMeta-rdohGq {
-    color: white;
+.channelTextArea-rNsIhG {
+    background: none;
 }
 
-.containerCozyBounded-1rKFAn .wrapper-3t9DeA {
+.cozy-3raOZG .header-23xsNx {
+    color: white;
+    margin-left: -70px;
+}
+
+.container-3FojY8 .avatar-1BDn8e {
     width: var(--avatar-size) !important;
     height: var(--avatar-size) !important;
-    position: relative;
-    top: -6px;
+    top: -2px;
+    left: -15px;
 }
 .placeholder-P6ptfj, 
 .slateTextArea-1bp44y .hljs-comment, 
-.slateTextArea-1bp44y .hljs-quote {
+.slateTextArea-1bp44y .hljs-quote,
+.timestampCompact-29LLPQ {
     color: white;
 }
 .markup-2BOw-j {
@@ -1392,15 +1398,19 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     top: 3px;
     position: relative;
     text-shadow: 0 0 5px black,0 0 25px black,0 0 25px black,0 0 5px black,0 0 5px black,0 0 5px black,0 0 5px black,0 0 5px black;
-    margin-left: calc(var(--avatar-size) + -39px);
+    margin-left: calc(var(--avatar-size) + -49px);
 }
 
-.containerCozy-B4noqO>*,
-.isMentionedCozy-3isp7y {
-    margin-left: calc(var(--avatar-size) + -39px);
+.slateTextArea-1Mkdgw.markup-2BOw-j {
+    margin-left: 32px;
 }
 
-.isMentionedCozy-3isp7y .markup-2BOw-j{
+.container-1ov-mD>*,
+.mentioned-xhSam7 {
+    margin-left: calc(var(--avatar-size) + -52px);
+}
+
+.mentioned-xhSam7 .markup-2BOw-j{
     margin-left: -1px;
     top: unset;
 }
@@ -1424,7 +1434,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     padding: 20px;
 }
 
-.isMentionedCozy-3isp7y {
+.mentioned-xhSam7 {
     position: relative;
     top: 3px;
 }
@@ -1434,17 +1444,19 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     top: -12px;
 }
 
-.theme-dark .isMentioned-N-h9aa {
+.theme-dark .mentioned-xhSam7,
+.message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z, 
+.mouse-mode .mentioned-xhSam7:hover {
     background: rgba(0, 140, 153, 0.276);
     border: 2px solid rgba(0, 140, 153, 0.146);
     padding: 4px;
 }
 
-.isMentionedCozy-3isp7y:after {
+.mentioned-xhSam7:before {
     display: none;
 }
 
-.theme-dark .isMentioned-N-h9aa .mention:hover {
+.theme-dark .mentioned-xhSam7 .mention:hover {
     color: #008c99 !important;
 }
 
@@ -1459,7 +1471,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     padding: 3.82px;
 }
 
-.theme-dark .isMentioned-N-h9aa .mention {
+.theme-dark .mentioned-xhSam7 .mention {
     background-color: rgba(26, 22, 22, 0.496) !important; 
     padding: 3.82px;
 }
@@ -1590,13 +1602,6 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background: none;
 }
 
-.slateTextArea-1bp44y {
-    caret-color: white;
-    position: absolute;
-    left: -6px;
-    right: 10px;
-    top: 14px;
-}
 
 
 /* Discord and BetterDiscord Settings */
@@ -1985,11 +1990,11 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: silver;
 }
 
-.tabBar-1E2ExX .item-3HpYcP[style*="background-color: rgb(67, 181, 129); color: rgb(255, 255, 255);"] {
+.tabBar-ZmDY9v .item-3HknzM[style*="background-color: rgb(67, 181, 129); color: rgb(255, 255, 255);"] {
     background-color: rgb(27, 104, 1) !important;
 }
 
-.tabBar-1E2ExX .item-3HpYcP[style*="background-color: rgba(67, 181, 129, 0.2); color: rgb(67, 181, 129);"] {
+.tabBar-ZmDY9v .item-3HknzM[style*="background-color: rgba(67, 181, 129, 0.2); color: rgb(67, 181, 129);"] {
     background-color: rgba(27, 104, 1, 0.38) !important;
     color: white !important;
 }
@@ -2066,7 +2071,17 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     padding-top: 4px !important;
 }
 
-
+.after_inlineCode-1KfVgj, 
+.before_inlineCode-1G9rTK, 
+.inlineCode-2ngu6Y {
+  background: rgba(255,255,255, .1);
+  padding: 3px;
+}
+.codeBlockSyntax-2i-tMA, 
+.syntaxAfter-hcA4AH, 
+.syntaxBefore-1YQ9lW {
+  color: white;
+}
 
 .peopleListItem-2nzedh {
     border: none;
@@ -2085,15 +2100,29 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     padding: 16px 20px;
 }
 
-.actionButton-uPB8Fs {
+.actionButton-uPB8Fs,
+.actionButton-uPB8Fs.highlight-Lf97TE {
     border-radius: 30%;
     color: white !important;
+    background-color: rgba(0, 0, 0, 0.10);
 }
 
 .actionButton-uPB8Fs:hover {
     background-color: rgba(0, 0, 0, 0.25);
 }
 
+.actionButton-uPB8Fs.actionDeny-de_uKj:hover {
+    background-color: #E82317!important;
+    color: white !important;
+}
+
+.wrapper-3D2qGf {
+    background-color: transparent;
+}
+
+.theme-dark .inset-3sAvek {
+    background-color: rgba(0, 0, 0, .33);
+}
 
   /* ---- */
 
@@ -2114,13 +2143,14 @@ body, div, span, textarea, ::-webkit-input-placeholder {
   .theme-dark .topic-TCb_qw a,
   .filenameLinkWrapper-1-14c5 a,
   .operations-36ENbA>a,
-  .theme-dark .welcomeMessage-3_Mcht a,
+  .theme-dark .welcomeMessage-ULm0mo a,
   .localBotMessage-1cGMdw a,
   .theme-dark .container-3-pyIM .content-2M3n_H a,
   .helpText-h3r3wC a,
   .lookLink-9FtZy-.colorBrand-3pXr91,
   .emptyStateSubtext-2njjqg a,
-  .theme-dark .container-2x5lvQ section a {
+  .theme-dark .container-2x5lvQ section a,
+  .fakeLink-26oLcc {
       color: #66cff9;
 }
 
@@ -2128,8 +2158,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-image: linear-gradient(0deg,transparent,transparent 1px,#66cff9 0,#66cff9 2px,transparent 0);
 }
   
-.welcomeMessage-3_Mcht .h1-1IDj26,
-.welcomeMessage-3_Mcht p {
+.welcomeMessage-ULm0mo .h1-3fOAWv,
+.welcomeMessage-ULm0mo p {
     color: white;
 }
 
@@ -2148,6 +2178,65 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     box-shadow: none;
 }
 
+.searchBar-6Kv8R2 .searchBarComponent-32dTOx {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, .33);
+    color: white;
+}
+
+.unreadPill-2HyYtt {
+    border-radius: 0;
+    color: #fff;
+    background-color: #008c99;
+}
+  
+.unreadPillCapStroke-7rkHbg {
+    color: #008c99;
+    fill: #008c99;
+}
+  
+.form-2fGMdU:before,
+.separator-42rNt0 {
+    background: none;
+}
+  
+.icon-KgGMGo,
+.button-1ZiXG9 {
+    color: white;
+}
+  
+.divider-24xeUg {
+    border: none;
+}
+  
+  
+.toolbar-2bjZV7:before {
+    border-top: 8px solid #008c99;
+}
+  
+.toolbar-2bjZV7 {
+    background-color: #008c99;
+    border-radius: 0;
+    box-shadow: none;
+}
+  
+.wrapper-2aW0bm {
+    background-color: #008c99;
+    border-radius: 0;
+}
+  
+.button-1ZiXG9:hover {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.reactionBtn-3N03Zj {
+    visibility: visible;
+    color: white;
+    height: 1.7rem;
+    width: 1.7rem;
+    margin-left: 6px;
+}
 
 /* Main Color */
 .color-primary { #008c99  rgba(0, 140, 153, 1.0); }
