--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -165,6 +165,12 @@
 	margin-right: -3px;
 }
 
+.avatar-1BDn8e {
+	margin-top: 8px;
+	width: 50px;
+	height: 50px;
+}
+
 .clickable-1JJAn8[href*="/activity"]:hover .layout-2DM8Md .avatar-3uk_u9::after,
 .clickable-1JJAn8[href*="/library"]:hover .layout-2DM8Md .avatar-3uk_u9::after,
 .clickable-1JJAn8[href*="/store"]:hover .layout-2DM8Md .avatar-3uk_u9::after,
@@ -326,8 +332,8 @@
 	opacity: .8;
 }
 
-.tabBar-1E2ExX .item-3HpYcP[style*="background-color: rgb(67, 181, 129); color: rgb(255, 255, 255);"],
-.tabBar-1E2ExX .item-3HpYcP[style*="background-color: rgba(67, 181, 129, 0.2); color: rgb(67, 181, 129);"] {
+.tabBar-ZmDY9v .item-3HknzM[style*="background-color: rgb(67, 181, 129); color: rgb(255, 255, 255);"],
+.tabBar-ZmDY9v .item-3HknzM[style*="background-color: rgba(67, 181, 129, 0.2); color: rgb(67, 181, 129);"] {
 	background-image: linear-gradient(45deg, rgba(59, 189, 58, 0.69) 0%, rgba(59, 189, 58, 0.811) 100%), url(https://images8.alphacoders.com/782/782017.jpg) !important;
 	background-size: cover;
 	color: white !important;
@@ -342,13 +348,45 @@
 }
 
 
-.theme-dark .modal-yWgWj- {
+.theme-dark .modal-yWgWj-,
+.theme-dark .root-1gCeng {
 	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg);
 	background-size: cover;
 	box-shadow: none;
 }
 
+.searchBar-6Kv8R2 .searchBarComponent-32dTOx {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+}
 
+.wrapper-3D2qGf,
+.theme-dark .popout-13LQ_3 {
+  background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg);
+	background-size: cover;
+}
+
+.theme-dark .inset-3sAvek,
+.theme-dark .enabled-1t_Gxm:hover,
+.theme-dark .memberListItem-31QoHj:not(.popoutDisabled-2RK7MF):hover,
+.itemActive-2V2HNc {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.helper-2c73HK {
+  color: white;
+}
+
+.moreUsers-7v8yWY,
+.iconBadge-2wi9r4 {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+}
+
+.theme-dark .separator-XqIyoz {
+	background: none;
+}
 
 .theme-dark .checked-3_4uQ9 {
 	background: linear-gradient(5deg, transparent 72%, rgba(204, 227, 246, 0.6) 100%) !important;
@@ -399,7 +437,8 @@
 	border-radius: 50px;
 }
 
-.theme-dark .actionButton-uPB8Fs {
+.theme-dark .actionButton-uPB8Fs,
+.actionButton-uPB8Fs.highlight-Lf97TE {
 	background-color: rgba(204, 227, 246, 0.242) !important;
 	border: 2px solid rgba(204, 227, 246, 0.60) !important;
 	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
@@ -471,25 +510,6 @@
 .panels-j1Uci_ {
 	background-color: transparent;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -603,6 +623,72 @@
 	box-shadow: inset 0 0 6px 1px rgba(137, 17, 17, 0.60);
 	background-color: rgba(138, 8, 8, 0.56);
 }
+
+.unreadPill-2HyYtt {
+	border-radius: 20px;
+	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%) !important;
+	border: 2px solid rgba(204, 227, 246, 0.60);
+	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+	background-color: rgba(65, 95, 132, 0.701) !important;
+	color: white;
+	margin-top: -3px;
+	padding: 8px 5px;
+}
+
+.unreadPillCapStroke-7rkHbg {
+  color: rgba(204, 227, 246, 0.843);
+  fill: rgba(204, 227, 246, 0.843);
+}
+
+.form-2fGMdU:before,
+.separator-42rNt0 {
+  background: none;
+}
+
+.icon-KgGMGo,
+.button-1ZiXG9 {
+  color: white;
+}
+
+.divider-24xeUg {
+  border: none;
+}
+
+
+.toolbar-2bjZV7:before {
+  border-top: none;
+}
+
+.toolbar-2bjZV7 {
+  background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%) !important;
+	border: 2px solid rgba(204, 227, 246, 0.60);
+	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+	background-color: rgba(65, 95, 132, 0.701) !important;
+  border-radius: 20px;
+}
+
+.wrapper-2aW0bm {
+  background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%) !important;
+	border: 2px solid rgba(204, 227, 246, 0.60);
+	box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+	background-color: rgba(65, 95, 132, 0.701) !important;
+  border-radius: 20px;
+}
+
+.button-1ZiXG9:hover {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.reactionBtn-3N03Zj {
+  visibility: visible;
+  color: white;
+  height: 1.7rem;
+  width: 1.7rem;
+  margin-left: 6px;
+}
+
+
 
 .theme-dark .tooltipBlack-PPG47z {
 	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%) !important;
@@ -926,6 +1012,14 @@
 	border-top: none;
 }
 
+.channelTextArea-rNsIhG {
+  background-color: transparent;
+}
+
+.activityText-yGKsKm {
+  overflow: visible;
+}
+
 .chat-3bRxxu {
 	background: transparent;
 }
@@ -950,46 +1044,41 @@
 }
 
 
-.dividerRed-MKoLlr .dividerContent-2L12VI:after, 
-.dividerRed-MKoLlr .dividerContent-2L12VI:before,
-.dividerContent-2L12VI:after, 
-.dividerContent-2L12VI:before {
+.divider-JfaTT5 {
 	border: none;
 }
 
-.divider-3gKybi {
+#app-mount .content-1o0f9g {
 	color: white;
 	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
     border: 2px solid rgba(204, 227, 246, 0.25);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.17);
 	background-color: rgba(65, 95, 132, 0.32);
 	border-radius: 50px;
-	margin-bottom: 7px;
+	padding: 4px 7px;
 }
 
-.dividerRed-MKoLlr {
+#app-mount .isUnread-3Ef-o9 .content-1o0f9g {
 	color: white;
 	background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
     border: 2px solid rgba(204, 227, 246, 0.60);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
     background-color: rgba(65, 95, 132, 0.701);
 	border-radius: 50px;
-	margin-bottom: 7px;
+	padding: 4px 7px;
 }
 
 .attachWrapper-2TRKBi {
 	border: none;
 }
 
-.textArea-2Spzkt {
+.placeholder-37qJjk {
 	font-weight: 800;
 	font-size: 1.1rem;
 	color: white;
 }
 
-.innerNoAutocomplete-1WpcVO {
-	border-radius: 30px;
-}
+
 
 .theme-dark .inner-zqa7da {
 	background-color: transparent;
@@ -999,7 +1088,9 @@
 	 background: linear-gradient(5deg, transparent 52%, rgba(204, 227, 246, 0.8) 100%);
     border: 2px solid rgba(204, 227, 246, 0.60);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
-    background-color: rgba(65, 95, 132, 0.256);
+		background-color: rgba(65, 95, 132, 0.256);
+		border-radius: 0px;
+		margin: 4px -20px 0 -16px;
 }
 
 .containerCozy-jafyvG .divider-32i8lo {
@@ -1010,29 +1101,32 @@
 	border: none;
 }
 
-.containerCozyBounded-1rKFAn {
+.container-3FojY8 {
 	overflow: visible;
 }
 
-.containerCozy-jafyvG {
-	padding-top: 35px;
-	padding-bottom: 34px;
-	margin-bottom: 12px;
-	margin-left: 2px;
+.messages-3amgkR {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.626) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
 	background-color: rgba(65, 95, 132, 0.33);
-	border-radius: 55px;
+	border-radius: 5px;
 }
 
-.timestampCozy-2hLAPV {
+.cozyMessage-3V1Y8y.groupStart-23k01U {
+	padding-top: 5px;
+	padding-bottom: 4px;
+	margin-bottom: 12px;
+	margin-left: 2px;
+}
+
+.timestampCozy-1HNQR2 {
 	font-size: 0.95rem;
 	font-weight: 500;
 	color: white;
 }
 
-.username-_4ZSMR {
+.username-1A8OIy {
 	font-size: 18px;
 }
 
@@ -1180,16 +1274,16 @@
 	background-color: rgba(155, 155, 155, 0.13);
 }
 
-.reaction-1ELvT8 {
+.reaction-1hd86g {
    background-color: rgba(0, 0, 0, 0.327);
    border-radius: 30px;
 }
 
-.reactionCount-2ddRoS {
+.reactionCount-2mvXRV {
 	color: white !important;
 }
 
-.reaction-1ELvT8.reactionMe-23mbRf {
+.reaction-1hd86g.reactionMe-wv5HKu {
 	background-color: rgba(222, 222, 222, 0.3);
 }
 
@@ -1372,10 +1466,16 @@
 	box-shadow: none;
 }
 
-.theme-dark .messagesPopoutWrap-1MQ1bW
+.theme-dark .messagesPopoutWrap-1MQ1bW,
 .theme-dark .searchResultsWrap-2DKFzt {
 	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg) !important;
 	border: none;
+}
+
+.backdrop-1wrmKB, 
+.backdropWithLayer-3_uhz4 {
+	background-color: rgba(0, 0, 0, 0.42) !important;
+	opacity: .4 !important;
 }
 
 .theme-dark .messagesPopout-24nkyi {
@@ -1449,7 +1549,7 @@
 	opacity: .6;
 }
 
-.headerCozyMeta-rdohGq {
+.cozy-3raOZG .header-23xsNx {
 	text-shadow: 0 0 10px black,0 0 5px black,0 0 25px black,0 0 25px black,0 0 25px black;
 }
 
@@ -1667,23 +1767,21 @@
     color: white;
 }
 
-.theme-dark .isMentioned-N-h9aa {
+.theme-dark .mentioned-xhSam7 {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.633)100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.523);
 	background-color: rgba(65, 95, 132, 0.58);
+	padding: 15px 0;
 }
 
-.isMentionedCozy-3isp7y {
+.mentioned-xhSam7 {
 	border-radius: 30px;
 }
 
-.isMentioned-N-h9aa {
-	margin: .2rem -.62rem .1rem;
-	padding: .39rem .72rem;
-}
 
-.isMentionedCozy-3isp7y:after {
+
+.mentioned-xhSam7:before {
 	border: none;
 	background: none;
 }
@@ -1704,7 +1802,7 @@
 	background-color: rgba(65, 95, 132, 0.93);
 }
 
-.isMentioned-N-h9aa .mention {
+.mentioned-xhSam7 .mention {
 	background: none;
 	background-color: transparent;
 	box-shadow: none;
@@ -1713,7 +1811,7 @@
 	color: rgb(191, 185, 185) !important;
 }
 
-.headerCozyMeta-rdohGq {
+.cozy-3raOZG .header-23xsNx {
 	margin-top: -11px;
 }
 
@@ -1826,6 +1924,11 @@
 	border-radius: 25px 25px 0 0;
 }
 
+.fakeLink-26oLcc {
+	color: #2ccebe;
+}
+
+
 .theme-dark .autocomplete-1vrmpx {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.633)100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
@@ -1896,7 +1999,7 @@
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.523);
 	background-color: rgba(65, 95, 132, 0.58);
-	border-radius: 50px;
+	border-radius: 5px;
 	padding: 0 3px;
 }
 
@@ -2426,7 +2529,7 @@
   .theme-dark .topic-TCb_qw a,
   .filenameLinkWrapper-1-14c5 a,
   .operations-36ENbA>a,
-  .theme-dark .welcomeMessage-3_Mcht a,
+  .theme-dark .welcomeMessage-ULm0mo a,
   .localBotMessage-1cGMdw a,
   .theme-dark .container-3-pyIM .content-2M3n_H a,
   .helpText-h3r3wC a,
@@ -2441,15 +2544,32 @@
   .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
 	background-image: linear-gradient(0deg,transparent,transparent 1px,#2ccebe 0,#2ccebe 2px,transparent 0);
   }
-  .welcomeMessage-3_Mcht .h1-1IDj26,
-  .welcomeMessage-3_Mcht p {
+  .welcomeMessage-ULm0mo .h1-3fOAWv,
+  .welcomeMessage-ULm0mo p {
 	color: white;
   }
   .emptyStateCTA-veJ2Cu {
 	opacity: 1;
 	}
+
+.after_inlineCode-1KfVgj, 
+.before_inlineCode-1G9rTK, 
+.inlineCode-2ngu6Y {
+  background: rgba(255,255,255, .1);
+  padding: 3px;
+}
+.codeBlockSyntax-2i-tMA, 
+.syntaxAfter-hcA4AH, 
+.syntaxBefore-1YQ9lW {
+  color: white;
+}
 	
 	.bg-h5JY_x {
+		background-color: transparent;
+	}
+
+	.message-2qnXI6.selected-2P5D_Z, 
+	.mouse-mode .message-2qnXI6:hover {
 		background-color: transparent;
 	}
   
